[gd_scene load_steps=11 format=3 uid="uid://c2ixvc8n1xffu"]

[ext_resource type="Script" uid="uid://mtktyesyqu24" path="res://Scripts/Enemy/Cactus/cactus_enemy.gd" id="1_3fqo2"]
[ext_resource type="Texture2D" uid="uid://cghennik7xmtu" path="res://Assets/Sprites/Enemy/Cactus/Cactus enemy-Sheet.png" id="1_rt6e4"]
[ext_resource type="Script" uid="uid://tu4701bv3oxn" path="res://Scripts/healthComponent.gd" id="2_goyyg"]
[ext_resource type="Script" uid="uid://dfrkp8w8ngnc1" path="res://Scripts/hitboxComponent.gd" id="3_67brj"]
[ext_resource type="Script" uid="uid://chx5fesow2lul" path="res://Scripts/Enemy/Cactus/fsmCactus.gd" id="5_3fqo2"]
[ext_resource type="Script" uid="uid://c0003wtiv7vax" path="res://Scripts/Enemy/Cactus/cactusAnimator.gd" id="6_qlm3w"]
[ext_resource type="AudioStream" uid="uid://xoo0d7d3k0sg" path="res://Assets/Sounds/music/enemy/cactus/attack.wav" id="7_aun8n"]
[ext_resource type="AudioStream" uid="uid://dbv7remjw8ok6" path="res://Assets/Sounds/NA_Character Footsteps (Dirt & Grass) - Pack 1/Walk/Dirt/DIRT - Walk 4.wav" id="8_vgopr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_67brj"]
radius = 12.0
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aun8n"]
radius = 30.0
height = 88.0

[node name="CactusEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_3fqo2")
move_speed = 300.0
attack_cooldown = 1.0
attack_damage = 1.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_67brj")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("1_rt6e4")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="ArmL" type="Sprite2D" parent="Body"]
position = Vector2(-13, 7)
texture = ExtResource("1_rt6e4")
offset = Vector2(13, -7)
region_enabled = true
region_rect = Rect2(256, 0, 64, 64)

[node name="ArmR" type="Sprite2D" parent="Body"]
position = Vector2(13, 7)
texture = ExtResource("1_rt6e4")
offset = Vector2(-13, -7)
region_enabled = true
region_rect = Rect2(192, 0, 64, 64)

[node name="LegL" type="Sprite2D" parent="Body"]
texture = ExtResource("1_rt6e4")
region_enabled = true
region_rect = Rect2(64, 0, 64, 64)

[node name="LegR" type="Sprite2D" parent="Body"]
texture = ExtResource("1_rt6e4")
region_enabled = true
region_rect = Rect2(128, 0, 64, 64)

[node name="HealthComponent" type="Node2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("2_goyyg")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent")]
script = ExtResource("3_67brj")
healthComponent = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_67brj")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_aun8n")

[node name="FSM" type="Node2D" parent="."]
script = ExtResource("5_3fqo2")

[node name="Animator" type="Node2D" parent="."]
script = ExtResource("6_qlm3w")

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_aun8n")

[node name="WalkAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vgopr")
